fix icon sizes and alignment

--- a/frontend/src/components/LandingPage/LandingCertificates.less
+++ b/frontend/src/components/LandingPage/LandingCertificates.less
@@ -11,8 +11,11 @@
     }
 
     .slick-dots {
+        position: absolute;
+        z-index: 1;
         button {
             background-color: #78A262 !important;
         }
+
     }
 }
